custom hyprland configuration

--- a/dots/.config/hypr/custom/env.conf
+++ b/dots/.config/hypr/custom/env.conf
@@ -1,22 +1,73 @@
 # You can put extra environment variables here
 # https://wiki.hyprland.org/Configuring/Environment-variables/
 
-# ######### Input method ##########
+## PSA! Dont put coments in the same line as env =, it will break the config ##
+
+# Had to comment out this line to get appimages to work: # env = QT_QPA_PLATFORM, wayland
+
+# -----------------------------------------------------
+# Input Method
 # See https://fcitx-im.org/wiki/Using_Fcitx_5_on_Wayland
-#env = QT_IM_MODULE, fcitx
-#env = XMODIFIERS, @im=fcitx
-#env = SDL_IM_MODULE, fcitx
-#env = GLFW_IM_MODULE, ibus
-#env = INPUT_METHOD, fcitx
+# -----------------------------------------------------
+##env = QT_IM_MODULE, fcitx
+##env = XMODIFIERS, @im=fcitx
+##env = SDL_IM_MODULE, fcitx
+##env = GLFW_IM_MODULE, ibus
+##env = INPUT_METHOD, fcitx
 
-# ######## Wayland #########
-# Tearing
-# env = WLR_DRM_NO_ATOMIC, 1
-# ?
-# env = WLR_NO_HARDWARE_CURSORS, 1
+# -----------------------------------------------------
+# Environment Variables
+# NVIDIA Hackery: https://wiki.hyprland.org/Nvidia/
+# -----------------------------------------------------
+env = WLR_NO_HARDWARE_CURSORS, 1
+env = LIBVA_DRIVER_NAME, nvidia
+# env = __GL_VRR_ALLOWED, 1
+# -- Screen tearing
+env = WLR_DRM_NO_ATOMIC, 1
+# -- Comment out the two below if encountering issues with firefox and discord respectively
+env = GBM_BACKEND nvidia-drm
+env = __GLX_VENDOR_LIBRARY_NAME, nvidia
 
-# ######## EDITOR #########
-#https://wiki.archlinux.org/title/Category:Text_editors
-# for example: vi nano nvim ...
+##env = ELECTRON_OZONE_PLATFORM_HINT,auto
 
-#env = EDITOR, vim
+# -----------------------------------------------------
+# Themes
+# -----------------------------------------------------
+##env = QT_QPA_PLATFORM, wayland
+##env = QT_QPA_PLATFORMTHEME, kde
+##env = XDG_MENU_PREFIX, plasma-
+
+env = XCURSOR_THEME, Bibata-Modern-Classic
+env = XCURSOR_SIZE, 24
+env = HYPRCURSOR_SIZE, 24
+
+# -----------------------------------------------------
+# Additional Hyprland config
+# -----------------------------------------------------
+xwayland {
+    force_zero_scaling = true
+}
+
+# -----------------------------------------------------
+# Virtual environment
+# ----------------------------------------------------
+# PATH not sourced properly by SDDM/GDM for Hyprland sessions, adding ~/.local/bin manually
+# Symlink other executables to this folder i.e. matugen and kde-material-you-colors
+env = PATH, $HOME/.local/bin/:$PATH 
+##env = ILLOGICAL_IMPULSE_VIRTUAL_ENV, ~/.local/state/quickshell/.venv
+
+# -----------------------------------------------------
+# Debugging
+# ----------------------------------------------------
+#debug {
+    # cat $XDG_RUNTIME_DIR/hypr/$(ls -t $XDG_RUNTIME_DIR/hypr/ | head -n 1)/hyprland.log # check last session
+    # cat $XDG_RUNTIME_DIR/hypr/$(ls -t $XDG_RUNTIME_DIR/hypr/ | head -n 2 | tail -n 1)/hyprland.log # check previous session
+    # disable_logs = false
+    # enable_stdout_logs = true
+    # colored_stdout_logs = true
+#}
+
+# -----------------------------------------------------
+# Default Applications (for keybinds etc)
+# ----------------------------------------------------
+##env = TERMINAL,kitty -1
