--- a/dots/.config/hypr/custom/execs.conf
+++ b/dots/.config/hypr/custom/execs.conf
@@ -1,6 +1,38 @@
 # You can make apps auto-start here
 # Relevant Hyprland wiki section: https://wiki.hyprland.org/Configuring/Keywords/#executing
 
-# Input method
-# exec-once = fcitx5
+# -----------------------------------------------------
+# Autostart
+# -----------------------------------------------------
 
+# Bar, wallpaper
+#exec-once = ~/.config/hypr/hyprland/scripts/start_geoclue_agent.sh
+#exec-once = qs -c $qsConfig &
+
+# Input method
+#exec-once = fcitx5
+
+# Core components (authentication, lock screen, notification daemon)
+#exec-once = gnome-keyring-daemon --start --components=secrets
+#exec-once = /usr/lib/polkit-kde-authentication-agent-1 || /usr/libexec/polkit-kde-authentication-agent-1  || /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 || /usr/libexec/polkit-gnome-authentication-agent-1 || /usr/libexec/kf6/polkit-kde-authentication-agent-1
+#exec-once = hypridle
+#exec-once = dbus-update-activation-environment --all
+#exec-once = sleep 1 && dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP # Some fix idk
+#exec-once = hyprpm reload
+
+# Audio
+#exec-once = easyeffects --gapplication-service
+
+# Clipboard: history
+# exec-once = wl-paste --watch cliphist store &
+#exec-once = wl-paste --type text --watch bash -c 'cliphist store && qs -c $qsConfig ipc call cliphistService update'
+#exec-once = wl-paste --type image --watch bash -c 'cliphist store && qs -c $qsConfig ipc call cliphistService update'
+
+# Themeing
+#exec-once = hyprctl setcursor Bibata-Modern-Classic 24
+#exec-once = nwg-look -a
+
+# Others
+#exec-once = insync start --qt-qpa-platform=xcb # Cloud sync
+#exec-once = filen mount /home/torhaala/Cloud & # Cloud sync / Network drive mounting -- Moved to systemd service instead
+#exec-once = sh ~/.config/hypr/custom/scripts/reset-xdg-portal.sh # Hackery to brute fix some xdg-portal issues
