--- a/dots/.config/hypr/custom/general.conf
+++ b/dots/.config/hypr/custom/general.conf
@@ -1,6 +1,59 @@
 # Put general config stuff here
 # Here's a list of every variable: https://wiki.hyprland.org/Configuring/Variables/
 
-# monitor=,addreserved, 0, 0, 0, 0 # Custom reserved area
+# -----------------------------------------------------
+# Monitors ('hyprctl monitors all')
+# https://wiki.hyprland.org/Configuring/Monitors/
+# -----------------------------------------------------
+# monitor=DP-3,2560x1440@165,auto,1 # Handled by nwg-displays ideally, use this as fallback
 
-# HDMI port: mirror display. To see device name, use `hyprctl monitors`
+general {
+    # Gaps and border
+    gaps_in = 2
+    gaps_out = 4
+    border_size = 3
+    layout = master
+    # focus_to_other_workspaces = true    
+}
+
+master {
+    mfact = 0.6
+}
+
+decoration {
+    # End4 usually disables all blur in rules.conf, ensure this is commented out
+    active_opacity = 1.0
+    inactive_opacity = 0.90
+    fullscreen_opacity = 1.0
+}
+
+# -----------------------------------------------------
+# Keyboard Layout
+# https://wiki.hyprland.org/Configuring/Variables/#input
+# -----------------------------------------------------
+input {
+    kb_layout = no
+    kb_variant = nodeadkeys # correct syntax?
+    # kb_options = grp:win_space_toggle # uncomment for Win+Space switching shortcut
+    numlock_by_default = false # changed from true
+    repeat_delay = 250
+    repeat_rate = 35
+
+    touchpad {
+        natural_scroll = yes
+        disable_while_typing = true
+        clickfinger_behavior = true
+        scroll_factor = 0.5
+    }
+
+    special_fallthrough = true
+    follow_mouse = 1 # mouseover shifts focus window
+    sensitivity = -0.3 # -1.0 to 1.0, 0 means no modification.
+}
+
+misc {
+    vfr = 0
+    # Can cause flickering w/NVIDIA in desktop env
+    # 1 = enabled for all, 2 = enabled for fullscreen (e.g. games)
+    vrr = 2 
+}
