--- a/dots/.config/hypr/custom/rules.conf
+++ b/dots/.config/hypr/custom/rules.conf
@@ -2,10 +2,40 @@
 # Window/layer rules: https://wiki.hyprland.org/Configuring/Window-Rules/
 # Workspace rules: https://wiki.hyprland.org/Configuring/Workspace-Rules/
 
-# ######## Window rules ########
 
-# Uncomment to apply global transparency to all windows:
-# windowrule = opacity 0.89 override 0.89 override, match:class .*
+# █░█░█ █ █▄░█ █▀▄ █▀█ █░█░█   █▀█ █░█ █░░ █▀▀ █▀
+# ▀▄▀▄▀ █ █░▀█ █▄▀ █▄█ ▀▄▀▄▀   █▀▄ █▄█ █▄▄ ██▄ ▄█
 
-# Disable blur for all xwayland apps
-# windowrule = no_blur on, match:xwayland 1
+# General Rules
+# windowrule = match:class .*, opacity 0.89 override 0.89 override # Apply transparency to all windows
+windowrule = match:class .*, no_blur off # Enable blur for most windows (reverts noblur from dots)
+windowrule = match:class ^()$, match:title ^()$, no_blur on # Disable blur for xwayland context menus (in case dots dont set it)
+
+# Floating windows
+windowrule = match:title ^(Extract)(.*)$, float on, center on
+windowrule = match:class ^(blueman-manager)$, float on
+windowrule = match:class ^(org.gnome.Settings)$, float on
+windowrule = match:class ^(waypaper)$, float on
+windowrule = match:class ^(org.gnome.Calculator)$, float on
+windowrule = match:class ^(org.gnome.SystemMonitor)$, float on
+windowrule = match:class ^(org.gnome.FileRoller)$, float on
+windowrule = match:class ^(com.github.nobara-project.nobaradrivermanager)$, float on, center on, size (monitor_w*0.45)
+windowrule = match:class ^(com.github.nobaraproject.nobarawelcome)$, float on, center on, size (monitor_w*0.45)
+windowrule = match:class ^(nobara.package.manager)$, float on, center on, size (monitor_w*0.45)
+windowrule = match:class ^(com.flatpost.flatpostapp)$, float on, center on, size (monitor_w*0.45)
+
+# Tiling for a specific apps
+# windowrule = match:class ^(io.github.celluloid_player.Celluloid)$, tile on
+
+# Steam related rules
+# windowrule = match:class ^(steam)$, workspace 3
+# windowrule = match:class ^(steam)$, float on, center on
+windowrule = match:class ^(steam)$, match:title ^(Sign in to Steam), float on, center on
+windowrule = match:class ^(steam)$, match:title ^(Steam), tile on
+windowrule = match:class ^(steam_app_)$, match:title ^(Battle.net), tile on
+
+
+# █░░ █▀█ █░█ █▀▀ █▀█   █▀█ █░█ █░░ █▀▀ █▀
+# █▄▄ █░█  █  ██▄ █▀▄   █▀▄ █▄█ █▄▄ ██▄ ▄█
+
+# De nada
