--- a/dots/.config/hypr/custom/keybinds.conf
+++ b/dots/.config/hypr/custom/keybinds.conf
@@ -1,24 +1,54 @@
-# See https://wiki.hyprland.org/Configuring/Binds/
+# -----------------------------------------------------
+# Keybindings
+# https://wiki.hyprland.org/Configuring/Keywords/
+# https://wiki.hyprland.org/Configuring/Binds/
+#
+# Use #! to add an extra column on the cheatsheet
+# Use ##! to add a section in that column
+# Lines ending with `# [hidden]` won't be shown on cheatsheet
+# -----------------------------------------------------
+
+# Unbinds (allowing to change the defaults)
+unbind = Super, Period #bindd = Super, Period, Emoji >> clipboard, global, quickshell:overviewEmojiToggle # Emoji >> clipboard
+unbind = Super, Slash #bindd = Super, Slash, Toggle cheatsheet, global, quickshell:cheatsheetToggle # Toggle cheatsheet
+unbind = Ctrl+Super, T #bindd = Ctrl+Super, T, Toggle wallpaper selector, global, quickshell:wallpaperSelectorToggle # Wallpaper selector
+unbind = Ctrl+Super, T #bindd = Ctrl+Super, T, Change wallpaper, exec, qs -c $qsConfig ipc call TEST_ALIVE || ~/.config/quickshell/$qsConfig/scripts/colors/switchwall.sh # [hidden] Change wallpaper (fallback)
+unbind = Ctrl+Super, R #bind = Ctrl+Super, R, exec, killall ags agsv1 gjs ydotool qs quickshell; qs -c $qsConfig & # Restart widgets
+unbind = Super, Period #bindd = Super, Period, Copy an emoji, exec, qs -c $qsConfig ipc call TEST_ALIVE || pkill fuzzel || ~/.config/hypr/hyprland/scripts/fuzzel-emoji.sh copy # [hidden] Emoji >> clipboard (fallback)
+unbind = Super, Semicolon #binde = Super, Semicolon, splitratio, -0.1 # [hidden]
+unbind = Super, Apostrophe #binde = Super, Apostrophe, splitratio, +0.1 # [hidden]
+unbind = Super+Alt, Space #bind = Super+Alt, Space, togglefloating, # Float/Tile
+unbind = Super, mouse:275 #bind = Super, mouse:275, togglespecialworkspace, # [hidden]
+unbind = Super, Minus #binde = Super, Minus, exec, qs -c $qsConfig ipc call zoom zoomOut # Zoom out
+unbind = Super, Equal #binde = Super, Equal, exec, qs -c $qsConfig ipc call zoom zoomIn # Zoom in
+unbind = Super, Minus #binde = Super, Minus, exec, qs -c $qsConfig ipc call TEST_ALIVE || ~/.config/hypr/hyprland/scripts/zoom.sh decrease 0.1 # [hidden] Zoom out
+unbind = Super, Equal #binde = Super, Equal, exec, qs -c $qsConfig ipc call TEST_ALIVE || ~/.config/hypr/hyprland/scripts/zoom.sh increase 0.1 # [hidden] Zoom in
+unbind = Super, W
+
 #!
 ##! User
 bind = Ctrl+Super, Slash, exec, xdg-open ~/.config/illogical-impulse/config.json # Edit shell config
 bind = Ctrl+Super+Alt, Slash, exec, xdg-open ~/.config/hypr/custom/keybinds.conf # Edit extra keybinds
+bind = Super, W, exec, ~/.config/hypr/hyprland/scripts/launch_first_available.sh "brave-browser" "google-chrome-stable" "zen-browser" "firefox" "brave" "chromium" "microsoft-edge-stable" "opera" "librewolf" # Browser
+bindd = Shift+Super, O, Toggle wallpaper selector, global, quickshell:wallpaperSelectorToggle # Wallpaper selector
+bindd = Shift+Super, O, Change wallpaper, exec, qs -c $qsConfig ipc call TEST_ALIVE || ~/.config/quickshell/$qsConfig/scripts/colors/switchwall.sh # [hidden] Change wallpaper (fallback)
+#bindd = Shift+Super, O, Change wallpaper, exec, ~/.config/quickshell/$qsConfig/scripts/colors/switchwall.sh # Change wallpaper
+#bindd = Ctrl+Super, O, Random wallpaper, exec, ~/.config/quickshell/$qsConfig/scripts/colors/randomwall.sh # Random wallpaper
 
-##! Apps
-# bind = Super, Return, exec, ~/.config/hypr/hyprland/scripts/launch_first_available.sh "${TERMINAL}" "kitty -1" "foot" "alacritty" "wezterm" "konsole" "kgx" "uxterm" "xterm" # Terminal
-# bind = Super, T, exec, ~/.config/hypr/hyprland/scripts/launch_first_available.sh  "${TERMINAL}" "kitty -1" "foot" "alacritty" "wezterm" "konsole" "kgx" "uxterm" "xterm" # [hidden] (terminal) (alt)
-# bind = Ctrl+Alt, T, exec, ~/.config/hypr/hyprland/scripts/launch_first_available.sh "${TERMINAL}" "kitty -1" "foot" "alacritty" "wezterm" "konsole" "kgx" "uxterm" "xterm" # [hidden] (terminal) (for Ubuntu people)
-# bind = Super, E, exec, ~/.config/hypr/hyprland/scripts/launch_first_available.sh "dolphin" "nautilus" "nemo" "thunar" "${TERMINAL}" "kitty -1 fish -c yazi" # File manager
-# bind = Super, W, exec, ~/.config/hypr/hyprland/scripts/launch_first_available.sh "google-chrome-stable" "zen-browser" "firefox" "brave" "chromium" "microsoft-edge-stable" "opera" "librewolf" # Browser
-# bind = Super, C, exec, ~/.config/hypr/hyprland/scripts/launch_first_available.sh "code" "codium" "cursor" "zed" "zedit" "zeditor" "kate" "gnome-text-editor" "emacs" "command -v nvim && kitty -1 nvim" "command -v micro && kitty -1 micro" # Code editor
-# bind = Ctrl+Super+Shift+Alt, W, exec, ~/.config/hypr/hyprland/scripts/launch_first_available.sh "wps" "onlyoffice-desktopeditors" "libreoffice" # Office software
-# bind = Super, X, exec, ~/.config/hypr/hyprland/scripts/launch_first_available.sh "kate" "gnome-text-editor" "emacs" # Text editor
-# bind = Ctrl+Super, V, exec, ~/.config/hypr/hyprland/scripts/launch_first_available.sh "pavucontrol-qt" "pavucontrol" # Volume mixer
-# bind = Super, I, exec, XDG_CURRENT_DESKTOP=gnome ~/.config/hypr/hyprland/scripts/launch_first_available.sh "qs -p ~/.config/quickshell/$qsConfig/settings.qml" "systemsettings" "gnome-control-center" "better-control" # Settings app
-# bind = Ctrl+Shift, Escape, exec, ~/.config/hypr/hyprland/scripts/launch_first_available.sh "gnome-system-monitor" "plasma-systemmonitor --page-name Processes" "command -v btop && kitty -1 fish -c btop" # Task manager
+##! Shell
+bindd = Super, Apostrophe, Toggle cheatsheet, global, quickshell:cheatsheetToggle # Toggle cheatsheet
+bind = Alt+Super, O, exec, killall ags agsv1 gjs ydotool qs quickshell; qs -c $qsConfig & # Restart widgets
+bind = Ctrl+Alt+Super, O, exec, killall kded6  # [hidden] #Force restart tray
 
-# Add stuff here
-# Use #! to add an extra column on the cheatsheet
-# Use ##! to add a section in that column
-# Add a comment after a bind to add a description, like above
-
+##! Window / Workspace management
+# Window split ratio
+binde = Super, Period, splitratio, -0.1 # Window split ratio
+binde = Super, Minus, splitratio, +0.1 # Window split ratio
+# Positioning mode
+bind = Super, Y, togglefloating # Toggle tiling (single window)
+bind = Super+Alt, Y, exec, hyprctl dispatch workspaceopt allfloat # Toggle tiling (all)
+#bind = Super+Shift, Y, pseudo # Toggle pseudo tiling
+#bind = Super+Alt, Y, togglesplit # Toggle vertical/horizontal split
+# Window Management
+bind = Super+Alt, left, movetoworkspace, -1
+bind = Super+Alt, right, movetoworkspace, +1
